[gd_scene load_steps=5 format=3 uid="uid://dyulrifx0fmu"]

[ext_resource type="Texture2D" uid="uid://c52obkngxb77x" path="res://Sprites/buttons/restart.png" id="1_k52d1"]
[ext_resource type="Script" uid="uid://hkn0cyab5bhh" path="res://Scenes/game_over.gd" id="1_ktc4i"]
[ext_resource type="Texture2D" uid="uid://dcduv81s3gql3" path="res://Sprites/buttons/quit.png" id="2_ktc4i"]

[sub_resource type="LabelSettings" id="LabelSettings_qg30o"]
font_size = 64

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ktc4i")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.003921569, 0.7176471)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 152.00006
offset_top = 160.00002
offset_right = 435.00006
offset_bottom = 295.0
scale = Vector2(3.04338, 3.23105)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "you died!"
label_settings = SubResource("LabelSettings_qg30o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "RESTART"
icon = ExtResource("1_k52d1")
expand_icon = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
toggle_mode = true
text = "QUIT"
icon = ExtResource("2_ktc4i")
expand_icon = true

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
